<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/colorPrimary">


    <TextView
        android:id="@+id/title_registrera"
        android:layout_width="266dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="60dp"
        android:paddingLeft="20dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/title_registrera"
        tools:layout_editor_absoluteX="91dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="1dp"
        android:paddingLeft="20dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/hint_lösenord"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:layout_editor_absoluteX="89dp" />
    <EditText
        android:id="@+id/home_number"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="61dp"
        android:paddingLeft="20dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/hint_bostad_number"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:layout_editor_absoluteX="89dp" />
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="121dp"
        android:background="#FFFFFF"
        android:paddingLeft="20dp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:layout_editor_absoluteX="89dp" />


    <Button
        android:id="@+id/register"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#FFFFFF"
        android:text="@string/register"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        />




</android.support.constraint.ConstraintLayout>